# lazyTrans

./: .gitignore  AGENTS.md  MONOREPO_MIGRATION_GUIDE.md  README.md  biome.jsonc  bunfig.toml  package-lock.json  package.json  todo.md  tsconfig.base.json  tsconfig.json  tsr.config.json  turbo.json  vite.config.ts
.husky/: pre-commit
apps/desktop/: components.json  daemon.html  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: daemon.tsx  index.css  index.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/tests/: window-position.test.ts
src/: constants.ts  daemon.tsx  index.css  index.tsx  routeTree.gen.ts  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/window/: Cargo.toml
src-tauri/plugins/window/permissions/autogenerated/: reference.md
src-tauri/plugins/window/permissions/autogenerated/commands/: set_always_on_top.toml  set_taskbar_visibility.toml
src-tauri/plugins/window/permissions/schemas/: schema.json
src-tauri/plugins/window/src/commands/: mod.rs
src-tauri/src/: lib.rs  setup.rs
src/actions/: window.ts
src/components/: hover-wrapper.tsx
src/components/ui/: tabs.tsx
src/config/: shortcuts.config.ts  window.config.ts
src/features/settings/: config.ts  layout.tsx
src/features/translator/: index.tsx
src/hooks/: use-app-shortcuts.ts  use-autostart.ts  use-global-shortcut.ts  use-tray.ts  use-window-shortcuts.ts
src/i18n/: index.tsx
src/i18n/locales/: en-us.ts  (+1 more)
src/routes/: __root.tsx  index.tsx
src/utils/: window.ts
(+143 files in other folders)
