[package]
name = "tauri-plugin-custom-window"
version = "0.1.0"
authors = []
description = ""
edition = "2021"
links = "tauri-plugin-custom-window"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tauri-plugin = { version = "2" }

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
